--- a/site_ViveBio/src/views/index.ejs
+++ b/site_ViveBio/src/views/index.ejs
@@ -58,7 +58,7 @@
         <div class="titulares">
           <h1>Productos en Oferta</h1>
         </div>
-        <section class="swiper-container" id="flavoursContainer">
+        <section class="carrousel_product_container" id="carrouselContainer">
           <% products.forEach(({id,productImages,name,discount,property,price})=> { %>
             <article class="box-swiper">
               <div class="card estilo-c">
