--- a/site_ViveBio/src/views/products/all.ejs
+++ b/site_ViveBio/src/views/products/all.ejs
@@ -229,11 +229,11 @@
                 </div>
               </article>
               <% }) %>
-          </section>
+          <!-- </section>
           <div class="banner">
             <img src="/images/Banner03.png" alt="">
           </div>
-        </section>
+        </section> -->
       </main>
 
       <%- include('../partials/footer') %>
