--- a/site_ViveBio/src/views/users/editProfile.ejs
+++ b/site_ViveBio/src/views/users/editProfile.ejs
@@ -108,6 +108,9 @@
                             <div class="edit_user__info-container">
                                 <span class="change-pass" id="btn-change-pass">Cambiar contraseña</span>
                             </div>
+                            <div class="edit_user__info-container">
+                                <span class="change-pass" id="">Eliminar usuario</span>
+                            </div>
                         </div>
                     </section>
                 </form>
