--- a/site_ViveBio/public/css/home.css
+++ b/site_ViveBio/public/css/home.css
@@ -723,7 +723,7 @@ segunda parte del main
 
 }
 
-.home .producto-iconos .icons__hover:hover {
+.home .producto-iconos a:hover {
     color: var(--azulMarino);
     background-color: white;
     border: 1px solid var(--azulMarino);
