--- a/site_ViveBio/public/css/add.css
+++ b/site_ViveBio/public/css/add.css
@@ -1,11 +1,56 @@
 .addProducts main {
-    display:flex;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
 }
 
+.camps_container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.container_images_add input{
+    display: none;
+}
+
+.plus_add_product{
+    position: absolute;
+    top: 35%;
+    left: 42%;
+}
+
+.add_form-box_image {
+    width: 80px;
+    height: 80px;
+    position: relative;
+    background-color: var(--verdeOscuro);
+    border-radius: 10px;
+    border: 2px solid black;
+}
+
+
+.container_images_add{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.secondary-box_product_add_image{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.second_add_form-box_image{
+    position: relative;
+    width: 45px;
+    height: 45px;
+    background-color: red;
+    border-radius: 10px;
+}
 .previewAvatar {
     width: 8rem;
     height: 8rem;
@@ -25,7 +70,7 @@
 }
 
 .add_input:hover,
-.add_input:focus{
+.add_input:focus {
     box-shadow: 0 0 5px var(--verdeOscuro), 0 0 10px var(--verdeOscuro), 0 0 15px var(--verdeOscuro);
     outline: none;
 }
@@ -42,7 +87,17 @@
     text-align: center;
     padding: 8px;
     margin: 10px;
+}
+
+
+
+.add_form-box_image input {
+    border: 1px solid var(--verdeFuerte);
+    padding: 3px;
+    font-size: 11px;
     transition: 0.5s;
+    border-radius: 5px;
+    width: 100%;
 }
 
 .add_form-box input {
@@ -62,13 +117,14 @@
     margin: 10px;
 }
 
-.add_form-box-description textarea{
+.add_form-box-description textarea {
     border: 1px solid var(--verdeFuerte);
     transition: 0.5s;
     border-radius: 5px;
     width: 100%;
 }
-.add_form-box select{
+
+.add_form-box select {
     border: 1px solid var(--verdeFuerte);
     transition: 0.5s;
     border-radius: 5px;
@@ -105,7 +161,7 @@
     font-size: 14px;
 }
 
-.add_error-submit ul{
+.add_error-submit ul {
     text-align: center;
     line-height: 1.5;
     background-color: #e88585db;
@@ -113,33 +169,21 @@
     border-radius: 5px;
 }
 
-#imagePreview{
-    height: 200px;
-    margin: 10px 0px;
-    border: solid 1px var(--verdeFuerte);
-    border-radius: 5px;
-}
 
 
-#imagePreview img{
-    width: 100%;
-    height: 100%;
-    border-radius: 5px;
-    object-fit: cover;
-}
-
-.add_form-box .errorActive{
+.add_form-box .errorActive {
     border: solid 1px red;
 }
-.add_form-box .errorInactive{
+
+.add_form-box .errorInactive {
     border: solid 1px green;
 }
 
-.add_form-box-description .errorActive{
+.add_form-box-description .errorActive {
     border: solid 1px red;
 }
 
-.add_form-box-description .errorInactive{
+.add_form-box-description .errorInactive {
     border: solid 1px green;
 }
 
@@ -150,7 +194,7 @@
 }
 
 @media (min-width: 768px) {
-    .add_button button:hover{
+    .add_button button:hover {
         background-color: var(--verdeFuerte);
     }
 
@@ -160,10 +204,7 @@
         border-radius: 10px;
     }
 
-    .camps_container {
-        display: flex;
-        justify-content: center;
-    }
+
 
     .add_form-box-description {
         display: flex;
